<resources>
    <string name="app_name">My Agenda</string>
    <string name="my_agenda">My Agenda</string>
    <string name="log_out">Log Out</string>
    <string name="Welcome">Welcome</string>

    <string name="add_new_event">Add new event:</string>
    <string name="edit_event">Edit event:</string>
    <string name="back">Back</string>

    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>

    <string name="login">Login</string>
    <string name="not_registered_press_here">Not Registered? Press Here</string>

    <string name="yourProfile">Your Profile</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="profession">Profession</string>
    <string name="save">Save</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="contacts">Contacts</string>
    <string name="new_contact">New Contact</string>
    <string name="contact_list">Contact List</string>
    <string name="comment">Comment:</string>
    <string name="attendance">Attend:</string>

    <string name="toast_FillBoxes">You must fill out all the boxes</string>
    <string name="toast_LoginSuccessful">Login successful!</string>
    <string name="toast_Password">Re-write your password</string>
    <string name="toast_SignUpSuccessful">Create user with email: Successful!</string>
    <string name="toast_Logout">Log out successful!</string>
    <string name="toast_ProfileSave">Your personal data has been successfully saved!</string>
    <string name="toast_personalData">Welcome to My Agenda! Fill the boxes.</string>
    <string name="toast_uploadSuccess">Upload Successful!</string>
    <string name="toast_uploadFailure">Upload Failed!</string>
    <string name="toast_save">Save Successful!</string>
    <string name="toast_noUserFound">There was no user found with the given credentials or user already exists as a contact.</string>
    <string name="toast_checkBoxes">No selected radio button. You can either select contacts or go back to the events page.</string>
    <string name="toast_emptyList">Warning: Empty list!</string>
    <string name="toast_smsSent">Collaborators were notified!</string>
    <string name="toast_userExists">User already exists with the same name and phone number! Please, check if already a user!</string>
    <string name="toast_dataUpdated">Data has been successfully updated!</string>
    <string name="toast_needProfileData">You have to fill your profile data before adding an event!</string>
    <string name="toast_noCollToInform">You have no collaborators on this event to send a reminder SMS!</string>
    <string name="toast_noCorrespondingNumber">You do not have a contact with the name: </string>
    <string name="toast_smsReminder">You have a reminder: </string>
    <string name="toast_onlyCreator">You have to be the creator of the event to send a reminder SMS!</string>
    <string name="toast_EventSave">Event was saved!</string>
    <string name="toast_EventDelete">Event was deleted!</string>
    <string name="toast_ContactDelete">Contact was deleted successfully!</string>
    <string name="toast_LocationSave">Location was successfully saved!</string>
    <string name="toast_LocationDelete">Location was successfully deleted!</string>

    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="collaborators">Collaborators:</string>
    <string name="collaborators_emails">Collaborators\' emails</string>
    <string name="event_time">Event Date and Time:</string>
    <string name="start_date">start_date</string>
    <string name="start_time">start_time</string>
    <string name="end_date">end_date</string>
    <string name="end_time">end_time</string>
    <string name="set_reminder">Set Reminder:</string>
    <string name="Collaborators">Collaborators</string>
    <string name="attending">Attending: </string>
    <string name="Attending">Attending</string>

    <string name="textview">TextView</string>
    <string name="title_activity_maps2">Map</string>
    <string name="_0_0">0.0</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="location_name">Name:</string>
    <string name="l_name">Name</string>
    <string name="select">SELECT</string>

    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="teal">Teal</string>
    <string name="black">Black</string>
    <string name="white">White</string>

</resources>