<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="5dp">

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/purple_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Purple"
            android:buttonTint="#000000"
            android:checked="false"
            android:text="@string/purple" />

        <RadioButton
            android:id="@+id/red_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Red"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/green_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Green"
            android:text="@string/green" />

        <RadioButton
            android:id="@+id/teal_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Teal"
            android:text="@string/teal" />

        <RadioButton
            android:id="@+id/black_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Black"
            android:buttonTint="#FFFFFF"
            android:text="@string/black"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/white_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:text="@string/white" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>